# ocaml-avroc

./: .gitignore  README.md  avro-example.opam  avro.opam  avro.opam.template  dune-project
.github/workflows/: ci.yml
examples/: dune  quickstop.ml
src/: basics.ml  data.ml  dune  errors.ml  generic.ml  io.ml  schema.ml  simple.ml  value.ml
test/: dune  test_values.ml
